--- a/1-Linear-Algebra-I/6_tensor_operations.ipynb
+++ b/1-Linear-Algebra-I/6_tensor_operations.ipynb
@@ -813,6 +813,122 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### DOT Product\n",
+    "\n",
+    "If we have 2 vectors (say, x and y) with the same length n, we can calculate the dot product between them, This is annotated in several different ways including the follwing:\n",
+    "\n",
+    "- x . y\n",
+    "- $x^T$ $y$\n",
+    "- <x, y>\n",
+    "\n",
+    "Regardless which notation you use, the calculation is the same; we calculate products in an element-wise fashion and then sum reductively across the products to a scalar value. That is: x . y = $\\sum^{i=1}_n$ $x_i$ $y_i$\n",
+    "\n",
+    "The dot product is ubiquitous in deep learning: It is performed at every artificial neuron in a deep neural network, which may be made up of millions (or orders of magnitude more) of these neurons\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.array([25, 2, 5])\n",
+    "y = np.array([0, 1, 2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# manually compute the dot product\n",
+    "25 * 0 + 2 * 1 + 5 * 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(12)"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# using numpy\n",
+    "np.dot(x, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(12.)"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# using pytorch\n",
+    "x_pt = torch.tensor([25, 2, 5.])\n",
+    "y_pt = torch.tensor([0, 1, 2.])\n",
+    "torch.dot(x_pt, y_pt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(), dtype=int32, numpy=12>"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# using tensorflow\n",
+    "x_tf = tf.Variable([25, 2, 5])\n",
+    "y_tf = tf.Variable([0, 1, 2])\n",
+    "tf.reduce_sum(tf.multiply(x_tf, y_tf))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
