Changes related to diagonal and orthogonal matrices

--- a/1-Linear-Algebra-I/8_matrix_properties.ipynb
+++ b/1-Linear-Algebra-I/8_matrix_properties.ipynb
@@ -745,17 +745,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "array([[-4,  1],\n",
-       "       [-8,  2]])"
+       "       [-4,  1]])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -763,13 +763,16 @@
    "source": [
     "# Materix inversion with no solution\n",
     "\n",
-    "X = np.array([[-4, 1], [-8, 2]])\n",
+    "# X = np.array([[-4, 1], [-8, 2]])\n",
+    "X = np.array([[-4, 1], [-4, 1]])\n",
+    "# X = np.array([[-4, 1], [-3, 6], [6, 8]])\n",
+    "\n",
     "X"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +782,7 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mLinAlgError\u001b[39m                               Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[35]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m Xinv = \u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mlinalg\u001b[49m\u001b[43m.\u001b[49m\u001b[43minv\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[39]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m Xinv = \u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mlinalg\u001b[49m\u001b[43m.\u001b[49m\u001b[43minv\u001b[49m\u001b[43m(\u001b[49m\u001b[43mX\u001b[49m\u001b[43m)\u001b[49m\n",
       "\u001b[36mFile \u001b[39m\u001b[32m/opt/anaconda3/envs/my_ai_py/lib/python3.12/site-packages/numpy/linalg/_linalg.py:609\u001b[39m, in \u001b[36minv\u001b[39m\u001b[34m(a)\u001b[39m\n\u001b[32m    606\u001b[39m signature = \u001b[33m'\u001b[39m\u001b[33mD->D\u001b[39m\u001b[33m'\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m isComplexType(t) \u001b[38;5;28;01melse\u001b[39;00m \u001b[33m'\u001b[39m\u001b[33md->d\u001b[39m\u001b[33m'\u001b[39m\n\u001b[32m    607\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m errstate(call=_raise_linalgerror_singular, invalid=\u001b[33m'\u001b[39m\u001b[33mcall\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m    608\u001b[39m               over=\u001b[33m'\u001b[39m\u001b[33mignore\u001b[39m\u001b[33m'\u001b[39m, divide=\u001b[33m'\u001b[39m\u001b[33mignore\u001b[39m\u001b[33m'\u001b[39m, under=\u001b[33m'\u001b[39m\u001b[33mignore\u001b[39m\u001b[33m'\u001b[39m):\n\u001b[32m--> \u001b[39m\u001b[32m609\u001b[39m     ainv = \u001b[43m_umath_linalg\u001b[49m\u001b[43m.\u001b[49m\u001b[43minv\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msignature\u001b[49m\u001b[43m=\u001b[49m\u001b[43msignature\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    610\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m wrap(ainv.astype(result_t, copy=\u001b[38;5;28;01mFalse\u001b[39;00m))\n",
       "\u001b[36mFile \u001b[39m\u001b[32m/opt/anaconda3/envs/my_ai_py/lib/python3.12/site-packages/numpy/linalg/_linalg.py:104\u001b[39m, in \u001b[36m_raise_linalgerror_singular\u001b[39m\u001b[34m(err, flag)\u001b[39m\n\u001b[32m    103\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m_raise_linalgerror_singular\u001b[39m(err, flag):\n\u001b[32m--> \u001b[39m\u001b[32m104\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m LinAlgError(\u001b[33m\"\u001b[39m\u001b[33mSingular matrix\u001b[39m\u001b[33m\"\u001b[39m)\n",
       "\u001b[31mLinAlgError\u001b[39m: Singular matrix"
@@ -788,6 +791,67 @@
    ],
    "source": [
     "Xinv = np.linalg.inv(X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Diagonal Matrix \n",
+    "\n",
+    "- Non zero elements along main  diagonal; zeros everywhere else\n",
+    "- Identity matrix is an example\n",
+    "- If this matrix is a square, can be denoted as diag(**x**) where x is vector of main diagonal elements\n",
+    "- Computationally efficient\n",
+    "    - Multiplication: $diag(x)y$ = $x \\odot y$\n",
+    "    - Inversion: $diag(x)^{-1}$ = $diag[1/x_1,....., 1/x_n]^T$\n",
+    "        - Cant' divided by zero so $x$ cannot be zero, here $x$ is diagonal\n",
+    "- Can be non-squared matroix and computation is still efficient:\n",
+    "    - if $h > w$, simply add zeros to product\n",
+    "    - if $h < w$, remove elements from product    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 0, 0],\n",
+       "       [0, 2, 0],\n",
+       "       [0, 0, 3]])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## Diagonal matrix\n",
+    "\n",
+    "X = np.array([[1, 0, 0], [0, 2, 0], [0, 0, 3]])\n",
+    "X"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Orthogonal Matrix\n",
+    "\n",
+    "- In Orthodonal matrices, like orthonormal vectors:\n",
+    "    - make up all rows\n",
+    "    - make up all columns\n",
+    "- This means $A^T A$ = $A A^T$ = I\n",
+    "- So, let us consider $A A^T$ = I\n",
+    "    - Here if add inverse on both sides: $A^{-1} A A^T$ = $A^{-1} I$\n",
+    "    - A and A inverse cancel out on the left side: $A^T$ = $A^{-1} I$\n",
+    "    - When $A^{-1}$ gets multiplied by $I$, it would become just $A^{-1}$: \n",
+    "        - $A^T$ = $A^{-1}$ \n",
+    "        - Calcualting $A^T$ is cheap, so for orthogonal matrix calculating $A^{-1}$ is also cheap"
    ]
   },
   {
