--- a/1-Linear-Algebra-I/8_matrix_properties.ipynb
+++ b/1-Linear-Algebra-I/8_matrix_properties.ipynb
@@ -845,13 +845,502 @@
     "- In Orthodonal matrices, like orthonormal vectors:\n",
     "    - make up all rows\n",
     "    - make up all columns\n",
-    "- This means $A^T A$ = $A A^T$ = I\n",
-    "- So, let us consider $A A^T$ = I\n",
+    "- This means $A^T A$ = $A A^T$ = $I$\n",
+    "- So, let us consider $A A^T$ = $I$\n",
     "    - Here if add inverse on both sides: $A^{-1} A A^T$ = $A^{-1} I$\n",
     "    - A and A inverse cancel out on the left side: $A^T$ = $A^{-1} I$\n",
     "    - When $A^{-1}$ gets multiplied by $I$, it would become just $A^{-1}$: \n",
     "        - $A^T$ = $A^{-1}$ \n",
     "        - Calcualting $A^T$ is cheap, so for orthogonal matrix calculating $A^{-1}$ is also cheap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0.],\n",
+       "       [0., 1., 0.],\n",
+       "       [0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check if I3's columns are orthogonal to each other\n",
+    "\n",
+    "I_3 = np.eye(3)\n",
+    "I_3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([1., 0., 0.]), array([0., 1., 0.]), array([0., 0., 1.]))"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c1 = I_3[:, 0]\n",
+    "c2 = I_3[:, 1]\n",
+    "c3 = I_3[:, 2]\n",
+    "c1, c2, c3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(np.float64(0.0), np.float64(0.0), np.float64(0.0))"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v1 = np.dot(c1, c2)\n",
+    "v2 = np.dot(c1, c3)\n",
+    "v3 = np.dot(c2, c3)\n",
+    "v1, v2, v3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(np.float64(1.0), np.float64(1.0), np.float64(1.0))"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check if I3's columns has unit norm\n",
+    "\n",
+    "uc_1 = np.linalg.norm(I_3[:, 0])\n",
+    "uc_2 = np.linalg.norm(I_3[:, 1])\n",
+    "uc_3 = np.linalg.norm(I_3[:, 2])\n",
+    "uc_1, uc_2, uc_3\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since the matrix has mutually orthogonal columns and each column has unit norm, the column vectors of $I_3$ are *orthonormal*. Since\n",
+    "$I_3^T$ = $I_3$ this means the rows of $I_3$ must also be orthonormal.\n",
+    "\n",
+    "Since the columns and rows of $I_3$ are orthonormal, $I_3$ is an orthogonal matrix."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0.6667,  0.3333,  0.6667],\n",
+       "        [-0.6667,  0.6667,  0.3333],\n",
+       "        [ 0.3333,  0.6667, -0.6667]])"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "K = torch.tensor([[2/3, 1/3, 2/3], [-2/3, 2/3, 1/3], [1/3, 2/3, -2/3]])\n",
+    "K"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([ 0.6667, -0.6667,  0.3333]),\n",
+       " tensor([0.3333, 0.6667, 0.6667]),\n",
+       " tensor([ 0.6667,  0.3333, -0.6667]))"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k_c1 = K[:, 0]\n",
+    "k_c2 = K[:, 1]\n",
+    "k_c3 = K[:, 2]\n",
+    "k_c1, k_c2, k_c3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.)"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.dot(k_c1, k_c2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.)"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.dot(k_c1, k_c3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.)"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.dot(k_c2, k_c3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(1.)"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.norm(k_c1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(1.)"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.norm(k_c2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(1.)"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.norm(k_c3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For this matrix as well we see all the columns are orthogonal to each other and have unit norm. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0.6667, -0.6667,  0.3333],\n",
+       "        [ 0.3333,  0.6667,  0.6667],\n",
+       "        [ 0.6667,  0.3333, -0.6667]])"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check if K transpose \n",
+    "\n",
+    "K_t = K.T\n",
+    "K_t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ True, False, False],\n",
+       "        [False,  True, False],\n",
+       "        [False, False,  True]])"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "K_t == K\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "K transpose is not equal to K so we can perform to check if K transpose columns are orthogonal to each other and check if K transpose columns has unit norm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([0.6667, 0.3333, 0.6667]),\n",
+       " tensor([-0.6667,  0.6667,  0.3333]),\n",
+       " tensor([ 0.3333,  0.6667, -0.6667]))"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "K_t_c1 = K_t[:, 0]\n",
+    "K_t_c2 = K_t[:, 1]\n",
+    "K_t_c3 = K_t[:, 2]\n",
+    "K_t_c1, K_t_c2, K_t_c3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.)"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.dot(K_t_c1, K_t_c2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.)"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.dot(K_t_c1, K_t_c3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.)"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.dot(K_t_c2, K_t_c3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor(1.), tensor(1.), tensor(1.))"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#  Check norm of K transpose\n",
+    "cn1 = torch.norm(K_t_c1)\n",
+    "cn2 = torch.norm(K_t_c2)\n",
+    "cn3 = torch.norm(K_t_c3)\n",
+    "cn1, cn2, cn3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So for $K^T$ as well we see that the all the columns are orthogonal to each other and have unit norm.\n",
+    "\n",
+    "Hence we can conclude that the K is orthogonal"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Alternatively, we can check if $K$ is orthogonal, we can check if $A^T A$ = $I$ for $K$ using a single line of code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 1.0000e+00, -3.3114e-09,  3.3114e-09],\n",
+       "        [-3.3114e-09,  1.0000e+00,  6.6227e-09],\n",
+       "        [ 3.3114e-09,  6.6227e-09,  1.0000e+00]])"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.matmul(K_t, K)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here, we can confirm that the output of the $K^T K$ is in fact $I$ (identity matrix - diagonals are 1s, other elements close to 0) and Therefore $K$ is orthogonal matrix"
    ]
   },
   {
