--- a/1-Linear-Algebra-I/2_scalar.ipynb
+++ b/1-Linear-Algebra-I/2_scalar.ipynb
@@ -246,7 +246,7 @@
     "\n",
     "Most widely used is tf.Variable which we will use here\n",
     "\n",
-    "As with TF tensors in PyTorch we can similarly operations, and we can easily to and from NumPy arrays\n",
+    "As with TF tensors in PyTorch we can perform similar operations, and we can easily to and from NumPy arrays\n",
     "\n",
     "Also, a full list of tensor data types is available [here](https://www.tensorflow.org/api_docs/python/tf/dtypes/DType)"
    ]
