--- a/1-Linear-Algebra-I/4_matrices.ipynb
+++ b/1-Linear-Algebra-I/4_matrices.ipynb
@@ -10,7 +10,7 @@
     "- Denoted in uppercase *italics* **bold** eg: ***X***\n",
     "- Height given priority ahead of width in notation, i.e.,: ($n_{row}$, $n_{col}$)\n",
     "    - if X has three rows and two columns, its shape is (3,2)\n",
-    "- Individual sclar elements denoted in uppercase, italics only\n",
+    "- Individual scalar elements denoted in uppercase, italics only\n",
     "    - Element in top-right corner of matrix ***X*** above would be *$X_{1,2}$*\n",
     "- Colon represents an entire row or column (in python index start with zero):\n",
     "    - Left column of matrix ***X*** is *$X_{:,1}$*\n",
