--- a/1-Linear-Algebra-I/8_matrix_properties.ipynb
+++ b/1-Linear-Algebra-I/8_matrix_properties.ipynb
@@ -736,7 +736,7 @@
     "    - Eg: if a column is [1,2] and another column cannot be [2,4] or also [1,2] \n",
     "\n",
     "Where can it be applied:\n",
-    "- we appply matrix inversion on square matrix $n_row$ = $n_col$ (vector span = matrix)\n",
+    "- we appply matrix inversion on square matrix $n_{row}$ = $n_{col}$ (vector span = matrix)\n",
     "    - Avoid overdetermination  $n_{row}$ > $n_{col}$ or  $n_{equations}$ > $n_{dimentions}$ \n",
     "    - Avoid underdetermination  $n_{row}$ < $n_{col}$ or  $n_{equations}$ < $n_{dimentions}$ \n",
     "\n",
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1010,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1030,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1162,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1216,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1236,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1256,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
