adding eigen values and eigen vectors using PyTorch

--- a/2-Linear-Algebra-II/2_eigen_vector_and_value.ipynb
+++ b/2-Linear-Algebra-II/2_eigen_vector_and_value.ipynb
@@ -40,6 +40,7 @@
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "import torch\n",
     "\n",
     "A = np.array([[-1, 4], [2, -2]])\n",
     "A"
@@ -316,8 +317,6 @@
     }
    ],
    "source": [
-    "import torch\n",
-    "\n",
     "A_pt = torch.tensor([[-1, 4], [2, -2.]])\n",
     "A_pt"
    ]
@@ -503,21 +502,326 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Eigen vectors in > 2 Dimensions\n",
+    "\n",
+    "While plotting gets trickier in higer-dimensional spaces, we can nevertheless fins and use eigenvectors with more than two dimensions. Here is a 3D example (there are 3 dimensions handels over 3 rows)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[25,  2,  9],\n",
+       "       [ 5, 26, -5],\n",
+       "       [ 3,  7, -1]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = np.array([[25, 2, 9], [5, 26, -5], [3, 7, -1]])\n",
+    "X"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([29.67623202, 20.62117365, -0.29740567]),\n",
+       " array([[-0.71175736, -0.6501921 , -0.34220476],\n",
+       "        [-0.66652125,  0.74464056,  0.23789717],\n",
+       "        [-0.22170001,  0.15086635,  0.90901091]]))"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lambdas_X, V_X = np.linalg.eig(X)\n",
+    "lambdas_X, V_X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([-0.71175736, -0.66652125, -0.22170001]),\n",
+       " array([-0.6501921 ,  0.74464056,  0.15086635]),\n",
+       " array([-0.34220476,  0.23789717,  0.90901091]))"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v1_X = V_X[:, 0]\n",
+    "v2_X = V_X[:, 1]\n",
+    "v3_X = V_X[:, 2]\n",
+    "v1_X, v2_X, v3_X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(np.float64(29.676232023948916),\n",
+       " np.float64(20.621173650535344),\n",
+       " np.float64(-0.2974056744842655))"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lambda1_X = lambdas_X[0]\n",
+    "lambda2_X = lambdas_X[1]\n",
+    "lambda3_X = lambdas_X[2]\n",
+    "lambda1_X, lambda2_X, lambda3_X"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let us check $Xv = \\lambda v$ for 3D matrix $X$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([-21.12227645, -19.77983919,  -6.5792208 ]),\n",
+       " array([-13.40772428,  15.3553624 ,   3.11104129]),\n",
+       " array([ 0.10177364, -0.07075197, -0.270345  ]))"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Xv1 = np.dot(X, v1_X)\n",
+    "Xv2 = np.dot(X, v2_X)\n",
+    "Xv3 = np.dot(X, v3_X)\n",
+    "Xv1, Xv2, Xv3\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([-21.12227645, -19.77983919,  -6.5792208 ]),\n",
+       " array([-13.40772428,  15.3553624 ,   3.11104129]),\n",
+       " array([ 0.10177364, -0.07075197, -0.270345  ]))"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lambda1_X * v1_X, lambda2_X * v2_X, lambda3_X * v3_X"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So, we can conclude that $Xv = \\lambda v$ for 3D matrix $X$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us do the eigenvalue and eigenvectors for 3D matrix using PyTorch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[25.,  2.,  9.],\n",
+       "        [ 5., 26., -5.],\n",
+       "        [ 3.,  7., -1.]])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Xpt = torch.tensor([[25, 2, 9.], [5, 26, -5], [3, 7, -1]])\n",
+    "Xpt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.return_types.linalg_eig(\n",
+       "eigenvalues=tensor([29.6762+0.j, 20.6212+0.j, -0.2974+0.j]),\n",
+       "eigenvectors=tensor([[ 0.7118+0.j,  0.6502+0.j, -0.3422+0.j],\n",
+       "        [ 0.6665+0.j, -0.7446+0.j,  0.2379+0.j],\n",
+       "        [ 0.2217+0.j, -0.1509+0.j,  0.9090+0.j]]))"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eigens_for_X = torch.linalg.eig(Xpt)\n",
+    "eigens_for_X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([0.7118, 0.6665, 0.2217]),\n",
+       " tensor([ 0.6502, -0.7446, -0.1509]),\n",
+       " tensor([-0.3422,  0.2379,  0.9090]))"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v1_X_pt = torch.real(eigens_for_X.eigenvectors[:, 0])\n",
+    "v2_X_pt = torch.real(eigens_for_X.eigenvectors[:, 1])\n",
+    "v3_X_pt = torch.real(eigens_for_X.eigenvectors[:, 2])\n",
+    "v1_X_pt, v2_X_pt, v3_X_pt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor(29.6762), tensor(20.6212), tensor(-0.2974))"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lambda1_X_pt = torch.real(eigens_for_X.eigenvalues[0])\n",
+    "lambda2_X_pt = torch.real(eigens_for_X.eigenvalues[1])\n",
+    "lambda3_X_pt = torch.real(eigens_for_X.eigenvalues[2])\n",
+    "lambda1_X_pt, lambda2_X_pt, lambda3_X_pt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([21.1223, 19.7798,  6.5792]),\n",
+       " tensor([ 13.4077, -15.3554,  -3.1110]),\n",
+       " tensor([ 0.1018, -0.0708, -0.2703]))"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Xv1_pt = torch.matmul(Xpt, v1_X_pt)\n",
+    "Xv2_pt = torch.matmul(Xpt, v2_X_pt)\n",
+    "Xv3_pt = torch.matmul(Xpt, v3_X_pt)\n",
+    "Xv1_pt, Xv2_pt, Xv3_pt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([21.1223, 19.7798,  6.5792]),\n",
+       " tensor([ 13.4077, -15.3554,  -3.1110]),\n",
+       " tensor([ 0.1018, -0.0708, -0.2703]))"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lambda1_X_pt * v1_X_pt, lambda2_X_pt * v2_X_pt, lambda3_X_pt * v3_X_pt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So, we can conclude that $Xv = \\lambda v$ for 3D matrix $X$ for PyTorch as well"
+   ]
   },
   {
    "cell_type": "code",
