--- a/2-Linear-Algebra-II/1_affine_transformation_matrix.ipynb
+++ b/2-Linear-Algebra-II/1_affine_transformation_matrix.ipynb
@@ -9,12 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
