--- a/2-Linear-Algebra-II/5_sigular_value_decomposition.ipynb
+++ b/2-Linear-Algebra-II/5_sigular_value_decomposition.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "af04b43c",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "bb4bcbed",
    "metadata": {},
    "outputs": [
@@ -46,7 +46,7 @@
        "       [ 5,  7]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "065e827c",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "fe2ec8bf",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
        "       [ 0.99189069, -0.0592843 , -0.11241989]])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "2f4b9a69",
    "metadata": {},
    "outputs": [
@@ -104,7 +104,7 @@
        "       [-0.82984845,  0.55798885]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "e1a4d6c3",
    "metadata": {},
    "outputs": [
@@ -125,7 +125,7 @@
        "array([8.66918448, 4.10429538])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "96f7022f",
    "metadata": {},
    "outputs": [
@@ -147,7 +147,7 @@
        "       [0.        , 4.10429538]])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "id": "27c3f138",
    "metadata": {},
    "outputs": [
@@ -178,7 +178,7 @@
        "       [0.        , 0.        ]])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "id": "1b9bf1db",
    "metadata": {},
    "outputs": [
@@ -202,7 +202,7 @@
        "       [ 5.,  7.]])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "id": "857b5e78",
    "metadata": {},
    "outputs": [
@@ -239,7 +239,7 @@
        "        [ 5.,  7.,  4.]])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "id": "657b26d7",
    "metadata": {},
    "outputs": [
@@ -262,51 +262,25 @@
        "         [-0.0975,  0.1350, -0.9860],\n",
        "         [-0.1961, -0.9739, -0.1140]]),\n",
        " tensor([26.1632,  8.1875,  2.5395]),\n",
-       " tensor([[-0.9810,  0.0113, -0.1937],\n",
-       "         [-0.1196, -0.8211,  0.5581],\n",
-       "         [ 0.1528, -0.5706, -0.8069]]))"
+       " tensor([[-0.9810, -0.1196,  0.1528],\n",
+       "         [ 0.0113, -0.8211, -0.5706],\n",
+       "         [-0.1937,  0.5581, -0.8069]]))"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "U, d, VT = torch.svd(P)\n",
-    "U, d, VT"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "id": "e73733f1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[ 0.9757+0.j,  0.1823+0.j,  0.1214+0.j],\n",
-       "        [ 0.0975+0.j,  0.1350+0.j, -0.9860+0.j],\n",
-       "        [ 0.1961+0.j, -0.9739+0.j, -0.1140+0.j]])"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "PPT = torch.matmul(P, torch.transpose(P, 0, 1))\n",
-    "\n",
-    "lambdas, V = torch.linalg.eig(PPT)\n",
-    "V\n"
+    "U, d, V = torch.linalg.svd(P)\n",
+    "U, d, V"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "1ebcddcc",
+   "id": "fab86f89",
    "metadata": {},
    "outputs": [
     {
@@ -328,52 +302,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "f9de17bd",
+   "execution_count": null,
+   "id": "e73733f1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.9810+0.j,  0.1937+0.j, -0.0113+0.j],\n",
-       "        [ 0.1196+0.j, -0.5581+0.j,  0.8211+0.j],\n",
-       "        [-0.1528+0.j,  0.8069+0.j,  0.5706+0.j]])"
+       "tensor([[654.,  66., 119.],\n",
+       "        [ 66.,  14.,   5.],\n",
+       "        [119.,   5.,  90.]])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "PPT = torch.matmul(P, torch.transpose(P, 0, 1))\n",
+    "PPT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "b6da686f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 659.,   79., -102.],\n",
+       "        [  79.,   57.,   16.],\n",
+       "        [-102.,   16.,   42.]])"
+      ]
+     },
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "PTP = torch.matmul(torch.transpose(P, 0, 1), P)\n",
-    "\n",
-    "lambdas, V = torch.linalg.eig(PTP)\n",
-    "V"
+    "PTP"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "6fc9d988",
+   "execution_count": 37,
+   "id": "38ba2081",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[-0.9810,  0.0113, -0.1937],\n",
-       "        [-0.1196, -0.8211,  0.5581],\n",
-       "        [ 0.1528, -0.5706, -0.8069]])"
+       "torch.return_types.linalg_eig(\n",
+       "eigenvalues=tensor([684.5148+0.j,  67.0359+0.j,   6.4492+0.j]),\n",
+       "eigenvectors=tensor([[ 0.9757+0.j,  0.1823+0.j,  0.1214+0.j],\n",
+       "        [ 0.0975+0.j,  0.1350+0.j, -0.9860+0.j],\n",
+       "        [ 0.1961+0.j, -0.9739+0.j, -0.1140+0.j]]))"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "U, d, VT = torch.svd(P)\n",
-    "VT"
+    "torch.linalg.eig(PPT)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "85fffafc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.return_types.linalg_eig(\n",
+       "eigenvalues=tensor([684.5148+0.j,   6.4492+0.j,  67.0359+0.j]),\n",
+       "eigenvectors=tensor([[ 0.9810+0.j,  0.1937+0.j, -0.0113+0.j],\n",
+       "        [ 0.1196+0.j, -0.5581+0.j,  0.8211+0.j],\n",
+       "        [-0.1528+0.j,  0.8069+0.j,  0.5706+0.j]]))"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.linalg.eig(PTP)"
    ]
   },
   {
@@ -386,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 16,
    "id": "dc8770eb",
    "metadata": {},
    "outputs": [],
@@ -396,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 17,
    "id": "ca11e638",
    "metadata": {},
    "outputs": [
@@ -404,16 +426,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2025-04-05 21:46:25--  https://hips.hearstapps.com/hmg-prod/images/happy-dog-outdoors-royalty-free-image-1652927740.jpg\n",
-      "Resolving hips.hearstapps.com (hips.hearstapps.com)... 151.101.160.155\n",
-      "Connecting to hips.hearstapps.com (hips.hearstapps.com)|151.101.160.155|:443... connected.\n",
+      "--2025-04-06 08:15:21--  https://hips.hearstapps.com/hmg-prod/images/happy-dog-outdoors-royalty-free-image-1652927740.jpg\n",
+      "Resolving hips.hearstapps.com (hips.hearstapps.com)... 151.101.124.155\n",
+      "Connecting to hips.hearstapps.com (hips.hearstapps.com)|151.101.124.155|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 137084 (134K) [image/jpeg]\n",
-      "Saving to: ‘happy-dog-outdoors-royalty-free-image-1652927740.jpg’\n",
+      "Saving to: ‘happy-dog-outdoors-royalty-free-image-1652927740.jpg.1’\n",
       "\n",
-      "happy-dog-outdoors- 100%[===================>] 133.87K  --.-KB/s    in 0.01s   \n",
+      "happy-dog-outdoors- 100%[===================>] 133.87K  --.-KB/s    in 0.1s    \n",
       "\n",
-      "2025-04-05 21:46:25 (10.6 MB/s) - ‘happy-dog-outdoors-royalty-free-image-1652927740.jpg’ saved [137084/137084]\n",
+      "2025-04-06 08:15:21 (988 KB/s) - ‘happy-dog-outdoors-royalty-free-image-1652927740.jpg.1’ saved [137084/137084]\n",
       "\n"
      ]
     }
@@ -424,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 18,
    "id": "83673511",
    "metadata": {},
    "outputs": [
@@ -454,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 19,
    "id": "aadc776e",
    "metadata": {},
    "outputs": [
@@ -484,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 20,
    "id": "314ce109",
    "metadata": {},
    "outputs": [
@@ -516,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 21,
    "id": "36487831",
    "metadata": {},
    "outputs": [],
@@ -534,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "066347c3",
    "metadata": {},
    "outputs": [
@@ -564,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 23,
    "id": "d0a49cca",
    "metadata": {},
    "outputs": [
@@ -650,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 24,
    "id": "3f350926",
    "metadata": {},
    "outputs": [
@@ -660,7 +682,7 @@
        "(1414, 2121)"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 25,
    "id": "080920ec",
    "metadata": {},
    "outputs": [
@@ -681,7 +703,7 @@
        "2999094"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -693,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 26,
    "id": "e07d3c36",
    "metadata": {},
    "outputs": [
@@ -703,7 +725,7 @@
        "226304"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 27,
    "id": "15602abd",
    "metadata": {},
    "outputs": [
@@ -725,7 +747,7 @@
        "0.07545745481802171"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
