--- a/2-Linear-Algebra-II/7_pseudo_inv_regression.ipynb
+++ b/2-Linear-Algebra-II/7_pseudo_inv_regression.ipynb
@@ -247,9 +247,222 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "64a09cec",
+   "metadata": {},
+   "source": [
+    "## Trace Operator\n",
+    "Denoted as Tr($A$). Simply the sum of the diagonal elements of a matrix: \n",
+    "\n",
+    "$\\sum_i A_{i,i}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "8ee85d96",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[25,  2],\n",
+       "       [ 5,  4]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = np.array([[25, 2], [5, 4]])\n",
+    "A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "f21ab5d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "29"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "25 + 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "03f330ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(29)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.trace(A)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf30b81f",
+   "metadata": {},
+   "source": [
+    "The trace operator has a number of useful properties that come in handy while rearranging linear algebra equations, e.g.:\n",
+    "\n",
+    "* Tr($A$) = Tr($A^T$)\n",
+    "* Assuming the matrix shapes line up: Tr($ABC$) = Tr($CAB$) = Tr($BCA$)\n",
+    "\n",
+    "In particular, the trace operator can provide a convenient way to calculate a matrix's Frobenius norm: $$||A||_F = \\sqrt{\\mathrm{Tr}(AA^\\mathrm{T})}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4aae033f",
+   "metadata": {},
+   "source": [
+    "**Exercises**\n",
+    "\n",
+    "With the matrix `A_p` provided below: \n",
+    "\n",
+    "1. Use the PyTorch trace method to calculate the trace of `A_p`.\n",
+    "2. Use the PyTorch Frobenius norm method and the trace method to demonstrate that $||A||_F = \\sqrt{\\mathrm{Tr}(AA^\\mathrm{T})}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "8e03e950",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-1.,  2.],\n",
+       "        [ 3., -2.],\n",
+       "        [ 5.,  7.]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A_p = torch.tensor([[-1., 2], [3, -2], [5, 7]])\n",
+    "A_p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "e3ca7c65",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(-3.)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.trace(A_p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "7c825959",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 5., -7.,  9.],\n",
+       "        [-7., 13.,  1.],\n",
+       "        [ 9.,  1., 74.]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "AAT = torch.matmul(A_p, torch.transpose(A_p, 0, 1))\n",
+    "AAT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "4595bf6d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(9.5917)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.sqrt(torch.trace(AAT))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "20e074e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(9.5917)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.norm(A_p, 'fro')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f21ab5d2",
+   "id": "b0c18531",
    "metadata": {},
    "outputs": [],
    "source": []
