--- a/3-Calculus-I/2-derivatives_differentiation.ipynb
+++ b/3-Calculus-I/2-derivatives_differentiation.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "1. The delta method - to find the slope of the curve at any given point\n",
     "\n",
-    "Let us consider the equation $y = x^2 + 2x + 2$:\n"
+    "Let us consider the equation $y = x^2 + 2x + 2$:"
    ]
   },
   {
