auto diff update

--- a/3-Calculus-I/3-automatic_differentiation.ipynb
+++ b/3-Calculus-I/3-automatic_differentiation.ipynb
@@ -176,9 +176,107 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "56e16119",
+   "metadata": {},
+   "source": [
+    "Excercise to use PyTorch and find the slope of $y = x^2 + 2x + 2$\n",
+    "\n",
+    "Let's use them to calculate $dy/dx$ at $x = 2$ where: \n",
+    "\n",
+    "\n",
+    "\n",
+    "$ \\frac{dy}{dx} = 2x + 2= 2(2) + 2 = 8 $"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "693eba10",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(2.)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xe = torch.tensor(2.0)\n",
+    "xe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "b52e8caf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(2., requires_grad=True)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xe.requires_grad_() # contagiously track gradients through forward pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "7787d9a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ye = xe**2 + 2*xe + 2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "a6b2e573",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ye.backward() # use autodiff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "ae501106",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(6.)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xe.grad"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56e16119",
+   "id": "29a78b19",
    "metadata": {},
    "outputs": [],
    "source": []
