single point regression - gradient

--- a/3-Calculus-I/4-regression-in-pytorch.ipynb
+++ b/3-Calculus-I/4-regression-in-pytorch.ipynb
@@ -293,7 +293,7 @@
    "source": [
     "**STEP 2:** Compare $\\hat{y}$ with true $y$ to calculate cost (loss) C\n",
     "\n",
-    "There is a PyTorch `MSELoss` method, but let's define it outselves to see how it works. MSE cost is defined by: $$C = \\frac{1}{n} \\sum_{i=1}^n (\\hat{y_i}-y_i)^2 $$"
+    "There is a PyTorch `MSELoss` method, but let's define it outselves to see how it works. (Mean Squared error cost) MSE cost is defined by: $$C = \\frac{1}{n} \\sum_{i=1}^n (\\hat{y_i}-y_i)^2 $$"
    ]
   },
   {
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "33ffe683",
    "metadata": {},
    "outputs": [
@@ -1547,8 +1547,8 @@
     "    optimizer.zero_grad() #reset gradients to zero; else they will accumulate\n",
     "\n",
     "    yhat = regression(x, m, b) # step 1: make predictions\n",
-    "    C = mse(yhat, y) # step 2: compute cost\n",
-    "    C.backward() # step 3: compute gradients\n",
+    "    C = mse(yhat, y) # step 2: compute cost (forward pass)\n",
+    "    C.backward() # step 3: compute gradients - autodiff (backword pass)\n",
     "    optimizer.step() # step 4: update parameters\n",
     "\n",
     "    print(f\"Epoch {epoch:.3g}, Cost = {C.item():.3g}, m grad = {m.grad.item():.3g}, b grad = {b.grad.item():.3g}\")"
