--- a/4-Calculus-II/1_partial_derivatives.ipynb
+++ b/4-Calculus-II/1_partial_derivatives.ipynb
@@ -12,15 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "fcd9cd82",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import torch\n",
-    "import math"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
