gradient of cost

--- a/4-Calculus-II/3_single_point_regression_gradient.ipynb
+++ b/4-Calculus-II/3_single_point_regression_gradient.ipynb
@@ -306,9 +306,120 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "07e0a7f3",
+   "metadata": {},
+   "source": [
+    "From the notes here we derive $\\frac{\\partial C}{\\partial m}$ and $\\frac{\\partial C}{\\partial b}$\n",
+    "\n",
+    "$\\frac{\\partial C}{\\partial m} = 2x(\\hat y - y)$ "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "f5cf5d14",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(108.7800)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2 * x * (yhat.item() - y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62ca2505",
+   "metadata": {},
+   "source": [
+    "$\\frac{\\partial C}{\\partial b} = 2 (\\hat y - y)$ "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "7d5621a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(15.5400)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2 * (yhat.item() - y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0dab4e97",
+   "metadata": {},
+   "source": [
+    "### The Gradient of Cost, $\\nabla C$\n",
+    "\n",
+    "The gradient of cost, which is symbolized $\\nabla C$ (pronounced \"nabla C\"), is a vector of all the partial derivatives of $C$ with respect to each of the individual model parameters: "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6c14987",
+   "metadata": {},
+   "source": [
+    "$\\nabla C = \\nabla_p C = \\left[ \\frac{\\partial{C}}{\\partial{p_1}}, \\frac{\\partial{C}}{\\partial{p_2}}, \\cdots, \\frac{\\partial{C}}{\\partial{p_n}} \\right]^T $"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8de7001a",
+   "metadata": {},
+   "source": [
+    "In this case, there are only two parameters, $b$ and $m$:\n",
+    "\n",
+    "$\\nabla C = \\left[ \\frac{\\partial{C}}{\\partial{b}}, \\frac{\\partial{C}}{\\partial{m}} \\right]^T $"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "aa2dbc91",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 15.5400],\n",
+       "        [108.7800]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gradient = torch.tensor([[b.grad.item(), m.grad.item()]]).T\n",
+    "gradient"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5cf5d14",
+   "id": "afe3f738",
    "metadata": {},
    "outputs": [],
    "source": []
