--- a/5-probalility/1-intro-to-probalility.ipynb
+++ b/5-probalility/1-intro-to-probalility.ipynb
@@ -121,13 +121,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "191ec2f8",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import scipy.stats as st\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from math import factorial\n"
@@ -610,9 +609,99 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "42484399",
+   "metadata": {},
+   "source": [
+    "## Expected Value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "7a10436b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.03125, 0.15625, 0.3125, 0.3125, 0.15625, 0.03125]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "P = [coin_flip_prob(5, x) for x in range(6)]\n",
+    "P"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c4a09680",
+   "metadata": {},
+   "source": [
+    "From the slides:\n",
+    "$$ \\mathbb{E} = \\sum_x xP(x) $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "7d08dc78",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.5"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "E = sum([P[x] *x for x in range(6)])\n",
+    "E"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25b1722e",
+   "metadata": {},
+   "source": [
+    "**Exercises**:\n",
+    "\n",
+    "1. Assuming heads = 1 and tails = 0, what’s the expected value of the toss of a fair coin?\n",
+    "2. ...and of two tosses of a fair coin?\n",
+    "3. You are one of a thousand people to purchase a lottery ticket. The ticket costs \\\\$10 and pays out \\\\$5000. What value should you expect from this transaction?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7cf7b493",
+   "metadata": {},
+   "source": [
+    "**Solutions**:\n",
+    "\n",
+    "1. (½)0 + (½)1 = 0 + ½ = ½\n",
+    "2. (¼)0 + (½)1 + (¼)2 = 0 + ½ + ½ = 1\n",
+    "\n",
+    "3.\n",
+    "(1/1000)(\\\\$5000-\\\\$10) + (999/1000)(-\\\\$10) \\\n",
+    "= (1/1000)(\\\\$4990) + (999/1000)(-\\\\$10) \\\n",
+    "= \\\\$4.99 + (\\\\$-9.99) \\\n",
+    "= -\\\\$5\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a10436b",
+   "id": "c030c2a3",
    "metadata": {},
    "outputs": [],
    "source": []
