--- a/5-probalility/7-information_theory.ipynb
+++ b/5-probalility/7-information_theory.ipynb
@@ -145,6 +145,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "357dc21e",
+   "metadata": {},
+   "source": [
+    "Depending on what logarithm base we use, the units of self-information vary. Most frequently, the units are either:\n",
+    "\n",
+    "* **nats**:\n",
+    "    * Natural logarithm, as above with `np.log()`\n",
+    "    * Typical in ML\n",
+    "* **bits**:\n",
+    "    * Base-2 logarithm\n",
+    "    * A.k.a. **shannons**\n",
+    "    * Typical in computer science\n",
+    "\n",
+    "So, the self-information of $P(x) = 0.1$ is ~2.3 nats."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "231ae0c6",
